revise ipynb and html

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3bdd21c007400b1400113065b11e2a09b04a2617807d99f1a7bd324e1196d079"
+  "signature": "sha256:6dabd4dbc867872038dcf13816f45d8927dce4af7f30270dac23d5ad83b1da5f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2694,55 +2694,21 @@
       "for i, one_date in enumerate(myDate[:]):\n",
       "    one_date = one_date.strftime('%Y-%m-%d')\n",
       "    for one_day in np.arange(0,7,1):\n",
-      "            for one_energy in df_dataFrame[one_date:one_date+' 01:00:00'].index.values.tolist():\n",
+      "            for h in range(24):\n",
       "                try:\n",
-      "                    if ward.fit_predict(df_dataFrame[one_date:one_date+' 01:00:00'].ix[one_energy].values.list()) == 2:\n",
-      "                        myJson[2]['children'][one_day]['children'][i]['children'].append = {u'name': one_energy}\n",
-      "                    elif ward.fit_predict(df_dataFrame[one_date:one_date+' 01:00:00'].ix[one_energy].values.list()) == 1:\n",
-      "                        myJson[1]['children'][one_day]['children'][i]['children'].append = {u'name': one_energy}\n",
+      "                    if ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_date:one_date+' %d:22:00'%(h)].values) == 2:\n",
+      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
+      "                    elif ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_energy].values) == 1:\n",
+      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
       "                    else:\n",
-      "                        myJson[0]['children'][one_day]['children'][i]['children'].append = {u'name': one_energy}\n",
+      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
       "                except:\n",
       "                    continue"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 74
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for i, one_date in enumerate(myDate[:]):\n",
-      "    one_date = one_date.strftime('%Y-%m-%d')\n",
-      "    for one_day in np.arange(0,7,1):\n",
-      "            for h in range(24):\n",
-      "                    if ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_date:one_date+' %d:22:00'%(h)].values.tolist()) == 2:\n",
-      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
-      "                    elif ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_energy].values.tolist()) == 1:\n",
-      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
-      "                    else:\n",
-      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "ValueError",
-       "evalue": "Cannot extract more clusters than samples: 3 clusters where given for a tree with 1 leaves.",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-82-ca2542014ea8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mone_day\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mh\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                     \u001b[0;32mif\u001b[0m \u001b[0mward\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_dataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mat_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d:22:00'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mone_date\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mone_date\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m' %d:22:00'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                         \u001b[0mmyJson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'children'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mone_day\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'children'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'children'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34mu'name'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mone_date\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'%d:22:00'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                     \u001b[0;32melif\u001b[0m \u001b[0mward\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_dataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mat_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%d:22:00'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mone_energy\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Library/Python/2.7/site-packages/sklearn/base.pyc\u001b[0m in \u001b[0;36mfit_predict\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    343\u001b[0m         \u001b[0;31m# non-optimized default implementation; override when a better\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m         \u001b[0;31m# method is possible for a given clustering algorithm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 345\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    346\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Library/Python/2.7/site-packages/sklearn/cluster/hierarchical.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    663\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcompute_full_tree\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    664\u001b[0m             self.labels_ = _hc_cut(self.n_clusters, self.children_,\n\u001b[0;32m--> 665\u001b[0;31m                                    self.n_leaves_)\n\u001b[0m\u001b[1;32m    666\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    667\u001b[0m             \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_hierarchical\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhc_get_heads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparents\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Library/Python/2.7/site-packages/sklearn/cluster/hierarchical.pyc\u001b[0m in \u001b[0;36m_hc_cut\u001b[0;34m(n_clusters, children, n_leaves)\u001b[0m\n\u001b[1;32m    495\u001b[0m         raise ValueError('Cannot extract more clusters than samples: '\n\u001b[1;32m    496\u001b[0m                          \u001b[0;34m'%s clusters where given for a tree with %s leaves.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 497\u001b[0;31m                          % (n_clusters, n_leaves))\n\u001b[0m\u001b[1;32m    498\u001b[0m     \u001b[0;31m# In this function, we store nodes as a heap to avoid recomputing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    499\u001b[0m     \u001b[0;31m# the max of the nodes: the first element is always the smallest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mValueError\u001b[0m: Cannot extract more clusters than samples: 3 clusters where given for a tree with 1 leaves."
-       ]
-      }
-     ],
-     "prompt_number": 82
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -2756,7 +2722,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 79,
+       "prompt_number": 89,
        "text": [
         "[{u'children': [{u'children': [{u'name': '0'},\n",
         "     {u'name': '1'},\n",
@@ -3289,7 +3255,7 @@
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
