revise ipynb and html

--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ee3b01b03773b66d533365014e4037f07f1f1336b4faff60863f3f187bf3750b"
+  "signature": "sha256:78c29924363eaa19b8119c8b1921be147e50c4e5522d8fca5f8f537f2315daf4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -856,27 +856,27 @@
       "            for h in xrange(24):\n",
       "                try:\n",
       "                    if ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_date:one_date+' %d:22:00'%(h)].values.tolist()) == 2:\n",
-      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
+      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h), 'colour': color[0]}\n",
       "                    elif ward.fit_predict(df_dataFrame.at_time('%d:22:00'%(h)).ix[one_energy].values.tolist()) == 1:\n",
-      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
+      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h), 'colour': color[1]}\n",
       "                    else:\n",
-      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h)}\n",
+      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:22:00'%(h), 'colour': color[2]}\n",
       "                except:\n",
       "                    continue\n",
       "                try:\n",
       "                    if ward.fit_predict(df_dataFrame.at_time('%d:52:00'%(h)).ix[one_date:one_date+' %d:52:00'%(h)].values.tolist()) == 2:\n",
-      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h)}\n",
+      "                        myJson[2]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h), 'colour': color[0]}\n",
       "                    elif ward.fit_predict(df_dataFrame.at_time('%d:52:00'%(h)).ix[one_energy].values.tolist()) == 1:\n",
-      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h)}\n",
+      "                        myJson[1]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h), 'colour': color[1]}\n",
       "                    else:\n",
-      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h)}\n",
+      "                        myJson[0]['children'][one_day]['children'][i]['children'][h] = {u'name': one_date + '%d:52:00'%(h), 'colour': color[2]}\n",
       "                except:\n",
       "                    continue"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 167
     },
     {
      "cell_type": "code",
@@ -890,13 +890,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 145,
+       "prompt_number": 168,
        "text": [
         "6"
        ]
       }
      ],
-     "prompt_number": 145
+     "prompt_number": 168
     },
     {
      "cell_type": "code",
@@ -910,7 +910,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 165,
+       "prompt_number": 169,
        "text": [
         "[{u'children': [{u'children': [{'colour': '#FFEE99', u'name': u'0'},\n",
         "     {'colour': '#FFEE99', u'name': u'1'},\n",
@@ -1443,7 +1443,7 @@
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 169
     },
     {
      "cell_type": "code",
@@ -1455,7 +1455,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 166
+     "prompt_number": 170
     },
     {
      "cell_type": "code",
