--- a/challenge1/analysis/shino/Challenge1.ipynb
+++ b/challenge1/analysis/shino/Challenge1.ipynb
@@ -1443,6 +1443,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = pd.DataFrame({'House': test_df['House'], 'EnergyProduction': predicted})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of      House  EnergyProduction\n",
+       "0        1               794\n",
+       "1        2               605\n",
+       "2        3               714\n",
+       "3        4               549\n",
+       "4        5               549\n",
+       "..     ...               ...\n",
+       "495    496               486\n",
+       "496    497               714\n",
+       "497    498               645\n",
+       "498    499               714\n",
+       "499    500               605\n",
+       "\n",
+       "[500 rows x 2 columns]>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution.to_csv(\"predicted_energy_production.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
